# MLOps_HRP_GCP_Kubernets_JenkinsCICD

./: .gitignore  .pdm-python  Dockerfile  Jenkinsfile  README.md  application.py  dvc.yaml  main.py  pyproject.toml  requirements.txt
.dvc/: config
Jenkins/: Dockerfile  steps_to_containerise.txt
src/: data_ingestion.py  data_preprocessing.py  exception.py  model_training.py  utils.py
src/config/: config.yaml  paths_config.py
templates/: index.html
