[project]
name = "mlops-hrp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdm>=2.25.9",
    "mlflow<3",
    "dvc>=3.63.0",
    "google-cloud-storage>=3.4.0",
    "scikit-learn>=1.7.2",
    "lightgbm>=4.6.0",
    "imbalanced-learn>=0.14.0",
    "flask>=3.1.2",
    "python-dotenv>=1.1.1",
    "ipykernel>=6.30.1",
    "dvc-gs>=3.0.2",
]

[tool.pdm.build]
package-dir="."
